I have changed the p of the pizza.html because it was wrong.

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,6 +7,19 @@
     <a href="../index.html">Homepage</a>
 </head>
 <body>
-    
+    <h1>Pepperoni Pizza</h1>
+    <img src="../recipes-images/descarga.jpeg" alt="">
+    <p>
+        In a small bowl, <b>ombine the active dry yeast with the warm water and sugar</b>. Stir gently and let stand for
+        <b>5-10 minutes</b> until the mixture becomes foamy. Then in a large bowl, <b>mix 2 and ½ cups wheat flour and 2 teaspoons salt</b>.
+        Make a well in the center of the flour. Pour the active yeast mixture into the hollow in the flour. 
+        Also add <b>2 tablespoons of olive oil</b>. Begin mixing the ingredients with a wooden spoon until the dough begins to form.
+    </p>
+    <p>
+        Transfer the dough to a lightly floured surface and knead for about <b>5-7 minutes</b>, or until the dough is smooth and elastic.
+        <b><em>If the dough is too sticky, add a little more flour</em></b>. Form the dough into a ball and place it in a lightly greased bowl. 
+        Cover the bowl with a damp cloth and <b>let the dough rest in a warm place for about 1 hour</b>, or until it has doubled in size.
+    </p>
+    <h3></h3>
 </body>
 </html>
