--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <a href="./recipes/pizza.html" rel="_blank">Pizza</a>
+    <a href="./recipes/pizza.html" rel="_blank">Pepperoni Pizza Recipe</a>
 </head>
 <body>
-    
+    <h1>Odin recipes</h1>
 </body>
 </html>
