I finished the pizza recipes. For finish it I put somo ul and ol, ul for ingredients al ol for steps

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,17 +9,74 @@
 <body>
     <h1>Pepperoni Pizza</h1>
     <img src="../recipes-images/descarga.jpeg" alt="">
-    <p>
-        In a small bowl, <b>ombine the active dry yeast with the warm water and sugar</b>. Stir gently and let stand for
-        <b>5-10 minutes</b> until the mixture becomes foamy. Then in a large bowl, <b>mix 2 and ½ cups wheat flour and 2 teaspoons salt</b>.
-        Make a well in the center of the flour. Pour the active yeast mixture into the hollow in the flour. 
-        Also add <b>2 tablespoons of olive oil</b>. Begin mixing the ingredients with a wooden spoon until the dough begins to form.
+
+    <p> 
+        Pepperoni pizza, one of the most popular types of pizza in the U.S., has its roots in Italian immigration to America in the early 20th century,
+        has its roots in Italian immigration to America in the early 20th century.
+        Although the pizza itself has Italian origins, the pepperoni topping is an American adaptation.
+        Italian immigrants brought with them the tradition of making pizza, but pepperoni, a type of spicy salami,
+        was created in the United States as a variation to suit local tastes, combining Italian influences with ingredients available in America.
+        with ingredients available in America.
     </p>
+
     <p>
-        Transfer the dough to a lightly floured surface and knead for about <b>5-7 minutes</b>, or until the dough is smooth and elastic.
-        <b><em>If the dough is too sticky, add a little more flour</em></b>. Form the dough into a ball and place it in a lightly greased bowl. 
-        Cover the bowl with a damp cloth and <b>let the dough rest in a warm place for about 1 hour</b>, or until it has doubled in size.
+        The first documented use of pepperoni on pizza dates back to the 1950s, when it became very popular in pizzerias in New York and other large cities.
+        New York and other large cities. From there, pepperoni pizza spread rapidly and became an iconic American fast food dish.
+        iconic American fast food dish. Today, pepperoni pizza is a worldwide classic and one of the most popular flavors in pizzerias.
+        and one of the most popular flavors in pizzerias around the world.
     </p>
-    <h3></h3>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>16 ounces pizza dough, store-bought or homemade </li>
+        <li>1/2 cup pizza sauce(see below)</li>
+        <li>18 to 20 slices pepperoni</li>
+        <li>12 ounces mozzarella cheese, grated</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1 teaspoon fresh oregano, optional</li>
+        <li>Flour for rolling and shaping dough</li>
+    </ul>
+        <h2>How to do a quick pizza sauce?</h2>
+    <ul>
+        <li>1/2 cup tomato sauce (no salt)</li>
+        <li>1/2 teaspoon kosher salt</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1/2 teaspoon granulated garlic</li>
+        <li>1/2 teaspoon granulated onion</li>
+        <li>1/4 teaspoon red pepper flakes</li>
+        <li>1 teaspoon olive oil</li>
+    </ul>
+    
+    <h2>Steps</h2>
+    <ol>
+    <li><b>Preheat the oven to 500°F:</b></li>
+    <p>If you are using a pizza stone, preheat it in the oven 
+    for at least 20 minutes so it is nice and hot as well.</p>
+    <li><b>Make the sauce:</b></li>
+    <p>If you are using my sauce recipe, stir together the ingredients. 
+    The sauce recipe makes just enough for one large pizza. 
+    You can easily double it if you are making more than one pizza.</p>
+    <li><b>Roll out the dough:</b></li>
+    <p>Roll out dough on a lightly floured surface. If it's hard to roll, 
+    let it rest for 5 minutes so it can come to room temperature. 
+    For a large pizza, I like to roll my dough into about a 14-inch diameter circle.</p>
+    <li><b>Add the toppings:</b></li>
+    <p>Transfer the dough to a lightly dusted pizza peel. Alternatively, fit it into a large cast-iron.</p>
+    <p>Add sauce in a light layer all over the pizza, leaving about 1/4-inch crust around the edges. 
+    Chop half of the pepperoni and sprinkle it over the sauce. Top the pizza with grated cheese and 
+    the rest of the pepperoni. Season with black pepper.</p>
+    <li><b>Cook the pizza:</b></li>
+    <p>If you're using a pizza stone, carefully slide pizza into the center of the preheated pizza stone. 
+    Cook for 6 minutes, then rotate the pizza halfway so it cooks evenly. Cook for another 6 to 8 minutes, 
+    or until the crust is golden brown and charred in spots.</p>
+    <p>If you're using a skillet, press the dough into a cast iron skillet and add toppings. 
+    Place the skillet over a high heat burner for 2 minutes to get it preheated and get the crust cooking right away. 
+    Then transfer to a 500 °F oven and bake for 10 to 12 minutes, or until the crust is golden brown.</p>
+    <li><b>Slice and serve:</b></li>
+    <p>Use pizza peel to slide pizza out onto a cutting board. Let the pizza rest for a minute and slice into pieces. 
+    Season with fresh oregano (optional). Serve while warm with a side salad.</p>
+    <li><b></b></li>
+    </ol>
 </body>
 </html>
