I created a html file and a directory for the phot os for a spanish omelette dish and I realized all the html file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
     <a href="./recipes/pizza.html" rel="_blank">Pepperoni Pizza Recipe</a>
+    <a href="./recipes/spomelette.html" rel="_blank">Spanish potato omelette</a>
 </head>
 <body>
     <h1>Odin recipes</h1>
