--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,21 +8,20 @@
 </head>
 <body>
     <h1>Pepperoni Pizza</h1>
-    <img src="../recipes-images/descarga.jpeg" alt="">
-
+    <img src="../recipes-images/descarga.jpeg" alt="pepperoni-pizza">
+    <h2><em>The history of this dish</em></h2>
     <p> 
-        Pepperoni pizza, one of the most popular types of pizza in the U.S., has its roots in Italian immigration to America in the early 20th century,
-        has its roots in Italian immigration to America in the early 20th century.
-        Although the pizza itself has Italian origins, the pepperoni topping is an American adaptation.
-        Italian immigrants brought with them the tradition of making pizza, but pepperoni, a type of spicy salami,
-        was created in the United States as a variation to suit local tastes, combining Italian influences with ingredients available in America.
-        with ingredients available in America.
+        Pepperoni pizza, one of the most popular types of pizza in the U.S., has its roots in Italian immigration to America in the early 20th century,<br>
+        has its roots in Italian immigration to America in the early 20th century.Although the pizza itself has Italian origins, the pepperoni topping is <br>
+        an American adaptation. Italian immigrants brought with them the tradition of making pizza, but pepperoni, a type of spicy salami, was created in <br>
+        the United States as a variation to suit local tastes, combining Italian influences with ingredients available in America.
+
     </p>
 
     <p>
-        The first documented use of pepperoni on pizza dates back to the 1950s, when it became very popular in pizzerias in New York and other large cities.
-        New York and other large cities. From there, pepperoni pizza spread rapidly and became an iconic American fast food dish.
-        iconic American fast food dish. Today, pepperoni pizza is a worldwide classic and one of the most popular flavors in pizzerias.
+        The first documented use of pepperoni on pizza dates back to the 1950s, when it became very popular in pizzerias in New York and other large cities. <br>
+        New York and other large cities. From there, pepperoni pizza spread rapidly and became an iconic American fast food dish. <br>
+        iconic American fast food dish. Today, pepperoni pizza is a worldwide classic and one of the most popular flavors in pizzerias. <br>
         and one of the most popular flavors in pizzerias around the world.
     </p>
 
@@ -51,32 +50,31 @@
     <h2>Steps</h2>
     <ol>
     <li><b>Preheat the oven to 500°F:</b></li>
-    <p>If you are using a pizza stone, preheat it in the oven 
+    <p>If you are using a pizza stone, preheat it in the oven <br>
     for at least 20 minutes so it is nice and hot as well.</p>
     <li><b>Make the sauce:</b></li>
-    <p>If you are using my sauce recipe, stir together the ingredients. 
-    The sauce recipe makes just enough for one large pizza. 
+    <p>If you are using my sauce recipe, stir together the ingredients. <br>
+    The sauce recipe makes just enough for one large pizza. <br>
     You can easily double it if you are making more than one pizza.</p>
     <li><b>Roll out the dough:</b></li>
-    <p>Roll out dough on a lightly floured surface. If it's hard to roll, 
-    let it rest for 5 minutes so it can come to room temperature. 
+    <p>Roll out dough on a lightly floured surface. If it's hard to roll, <br>
+    let it rest for 5 minutes so it can come to room temperature. <br>
     For a large pizza, I like to roll my dough into about a 14-inch diameter circle.</p>
     <li><b>Add the toppings:</b></li>
     <p>Transfer the dough to a lightly dusted pizza peel. Alternatively, fit it into a large cast-iron.</p>
-    <p>Add sauce in a light layer all over the pizza, leaving about 1/4-inch crust around the edges. 
-    Chop half of the pepperoni and sprinkle it over the sauce. Top the pizza with grated cheese and 
+    <p>Add sauce in a light layer all over the pizza, leaving about 1/4-inch crust around the edges. <br>
+    Chop half of the pepperoni and sprinkle it over the sauce. Top the pizza with grated cheese and  <br>
     the rest of the pepperoni. Season with black pepper.</p>
     <li><b>Cook the pizza:</b></li>
-    <p>If you're using a pizza stone, carefully slide pizza into the center of the preheated pizza stone. 
-    Cook for 6 minutes, then rotate the pizza halfway so it cooks evenly. Cook for another 6 to 8 minutes, 
+    <p>If you're using a pizza stone, carefully slide pizza into the center of the preheated pizza stone. <br>
+    Cook for 6 minutes, then rotate the pizza halfway so it cooks evenly. Cook for another 6 to 8 minutes, <br>
     or until the crust is golden brown and charred in spots.</p>
-    <p>If you're using a skillet, press the dough into a cast iron skillet and add toppings. 
-    Place the skillet over a high heat burner for 2 minutes to get it preheated and get the crust cooking right away. 
+    <p>If you're using a skillet, press the dough into a cast iron skillet and add toppings. <br>
+    Place the skillet over a high heat burner for 2 minutes to get it preheated and get the crust cooking right away. <br>
     Then transfer to a 500 °F oven and bake for 10 to 12 minutes, or until the crust is golden brown.</p>
     <li><b>Slice and serve:</b></li>
-    <p>Use pizza peel to slide pizza out onto a cutting board. Let the pizza rest for a minute and slice into pieces. 
+    <p>Use pizza peel to slide pizza out onto a cutting board. Let the pizza rest for a minute and slice into pieces. <br>
     Season with fresh oregano (optional). Serve while warm with a side salad.</p>
-    <li><b></b></li>
     </ol>
 </body>
 </html>
